<resources>
    <string name="app_name">Velocity</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_prompt">Don\'t have an account? Sign up here.</string>
    <string name="already_have_account">Already have an account? Login here.</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="save">Save</string>


    <string name="full_name_placeholder">Full Name</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="featured_cars">Featured Cars</string>
    <string name="location">Location</string>
    <string name="car_image">Car Image</string>
    <string name="odometer_icon_description">Odometer Reading</string>
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="car_year">Year</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="next">Next</string>
    <string name="car_color">Color</string>
    <string name="odometer_reading">Odometer (km)</string>
    <string name="price">Price ($)</string>
    <string name="description">Description</string>
    <string name="previous">Previous</string>
    <string name="number_of_doors">Number of Doors</string>
    <string name="number_of_seats">Number of Seats</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="navigation_system">Navigation System</string>
    <string name="bluetooth_connectivity">Bluetooth Connectivity</string>
    <string name="sunroof">Sunroof</string>
    <string name="drivetrain">Drivetrain Type</string>
    <string name="remove_image">Remove Image</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contact_me">Contact Me</string>
    <string name="your_listings">My Listings</string>
    <string name="create_post"></string>
    <string name="delete_account">Delete</string>
    <string name="map">Map</string>

</resources>